--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -24,8 +24,8 @@ default: &default
 development:
   <<: *default
   database: after_life_development
-  user: 'postgres'
-  password: 'root'
+  user: ''
+  password: ''
   host: localhost
 
   # The specified database role being used to connect to postgres.
@@ -61,8 +61,8 @@ development:
 test:
   <<: *default
   database: after_life_test
-  user: 'postgres'
-  password: 'root'
+  user: ''
+  password: ''
   host: localhost
 
 # As with config/credentials.yml, you never want to store sensitive information,
